<resources>
    <string name="app_name">Movie App</string>
    <string name="title_activity_detail_movie">Detail Movie</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="title">Title</string>
    <string name="rating">9.9</string>
    <string name="date">%s</string>
    <string name="genre">Music, Drama, History</string>
    <string name="duration">2h 15m</string>
    <string name="overview">Overview</string>
    <string name="overview_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="cast">Cast</string>
    <string name="view_all_cast">View All Cast</string>
    <string name="watch">Play Trailer</string>
    <string name="share">Share</string>
    <string name="_10">/ 10</string>
    <string-array name="data_movie_title">
        <item>Alita: Battle Angel</item>
        <item>Aquaman</item>
        <item>A Star Is Born</item>
        <item>Bohemian Rhapsody</item>
        <item>Cold Pursuit</item>
        <item>Creed II</item>
        <item>Fantastic Beasts: The Crimes of Grindelwald</item>
        <item>Glass</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Avengers: Infinity War</item>
        <item>Mary Queen of Scots</item>
        <item>Master Z: Ip Man Legacy</item>
        <item>Mortal Engines</item>
        <item>Overlord</item>
        <item>Ralph Breaks the Internet</item>
        <item>Robin Hood</item>
        <item>Serenity</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>T-34</item>
    </string-array>
    <string-array name="data_movie_overview">
        <item>When Alita awakens with no memory of who she is in a future world she does not recognize, she is taken in by Ido, a compassionate doctor who realizes that somewhere in this abandoned cyborg shell is the heart and soul of a young woman with an extraordinary past.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>The quiet family life of Nels Coxman, a snowplow driver, is upended after his son\'s murder. Nels begins a vengeful hunt for Viking, the drug lord he holds responsible for the killing, eliminating Viking\'s associates one by one. As Nels draws closer to Viking, his actions bring even more unexpected and violent consequences, as he proves that revenge is all in the execution.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his family\'s past, Adonis Creed is up against the challenge of his life.</item>
        <item>Gellert Grindelwald has escaped imprisonment and has begun gathering followers to his cause—elevating wizards above all non-magical beings. The only one capable of putting a stop to him is the wizard he once called his closest friend, Albus Dumbledore. However, Dumbledore will need to seek help from the wizard who had thwarted Grindelwald once before, his former student Newt Scamander, who agrees to help, unaware of the dangers that lie ahead. Lines are drawn as love and loyalty are tested, even among the truest friends and family, in an increasingly divided wizarding world.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless\' discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup\'s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>In 1561, Mary Stuart, widow of the King of France, returns to Scotland, reclaims her rightful throne and menaces the future of Queen Elizabeth I as ruler of England, because she has a legitimate claim to the English throne. Betrayals, rebellions, conspiracies and their own life choices imperil both Queens. They experience the bitter cost of power, until their tragic fate is finally fulfilled.</item>
        <item>Following his defeat by Master Ip, Cheung Tin Chi tries to make a life with his young son in Hong Kong, waiting tables at a bar that caters to expats. But it\'s not long before the mix of foreigners, money, and triad leaders draw him once again to the fight.</item>
        <item>Many thousands of years in the future, Earth\'s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever.</item>
        <item>France, June 1944. On the eve of D-Day, some American paratroopers fall behind enemy lines after their aircraft crashes while on a mission to destroy a radio tower in a small village near the beaches of Normandy. After reaching their target, the surviving paratroopers realise that, in addition to fighting the Nazi troops that patrol the village, they also must fight against something else.</item>
        <item>Video game bad guy Ralph and fellow misfit Vanellope von Schweetz must risk it all by traveling to the World Wide Web in search of a replacement part to save Vanellope\'s video game, Sugar Rush. In way over their heads, Ralph and Vanellope rely on the citizens of the internet — the netizens — to help navigate their way, including an entrepreneur named Yesss, who is the head algorithm and the heart and soul of trend-making site BuzzzTube.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>The quiet life of Baker Dill, a fishing boat captain who lives on the isolated Plymouth Island, where he spends his days obsessed with capturing an elusive tuna while fighting his personal demons, is interrupted when someone from his past comes to him searching for help.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>In 1944, a courageous group of Russian soldiers managed to escape from German captivity in a half-destroyed legendary T-34 tank. Those were the times of unforgettable bravery, fierce fighting, unbreakable love, and legendary miracles.</item>
    </string-array>
    <string-array name="data_movie_rating">
        <item>7.1</item>
        <item>6.9</item>
        <item>7.5</item>
        <item>8.0</item>
        <item>5.6</item>
        <item>6.9</item>
        <item>6.9</item>
        <item>6.6</item>
        <item>7.8</item>
        <item>8.3</item>
        <item>6.6</item>
        <item>5.7</item>
        <item>6.1</item>
        <item>6.7</item>
        <item>7.2</item>
        <item>5.9</item>
        <item>5.4</item>
        <item>8.4</item>
        <item>6.8</item>
    </string-array>
    <string-array name="data_movie_date">
        <item>January 31, 2019</item>
        <item>December 7, 2018</item>
        <item>October 3, 2018</item>
        <item>October 24, 2018</item>
        <item>February 7, 2019</item>
        <item>November 21, 2018</item>
        <item>November 14, 2018</item>
        <item>January 16, 2019</item>
        <item>January 3, 2019</item>
        <item>April 25, 2018</item>
        <item>December 7, 2018</item>
        <item>December 20, 2018</item>
        <item>November 27, 2018</item>
        <item>November 1, 2018</item>
        <item>November 20, 2018</item>
        <item>November 21, 2018</item>
        <item>January 24, 2019</item>
        <item>December 6, 2018</item>
        <item>December 27, 2018</item>
    </string-array>
    <string-array name="data_movie_genre">
        <item>Action, Science Fiction, Adventure</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Drama, Romance, Music</item>
        <item>Music, Drama, History</item>
        <item>Action, Crime, Thriller</item>
        <item>Drama</item>
        <item>Adventure, Fantasy, Drama</item>
        <item>Thriller, Drama, Science Fiction</item>
        <item>Animation, Family, Adventure</item>
        <item>Adventure, Action, Science Fiction</item>
        <item>Drama, History</item>
        <item>Action</item>
        <item>Adventure, Science Fiction</item>
        <item>Horror, War, Science Fiction</item>
        <item>Family, Animation, Comedy, Adventure</item>
        <item>Adventure, Action, Thriller</item>
        <item>Thriller, Mystery, Drama</item>
        <item>Action, Adventure, Animation, Science Fiction, Comedy</item>
        <item>War, Action, Drama, History</item>
    </string-array>
    <string-array name="data_movie_duration">
        <item>2h 2m</item>
        <item>2h 23m</item>
        <item>2h 16m</item>
        <item>2h 15m</item>
        <item>1h 59m</item>
        <item>2h 10m</item>
        <item>2h 14m</item>
        <item>2h 9m</item>
        <item>1h 44m</item>
        <item>2h 29m</item>
        <item>2h 4m</item>
        <item>1h 47m</item>
        <item>2h 9m</item>
        <item>1h 50m</item>
        <item>1h 52m</item>
        <item>1h 56m</item>
        <item>1h 42m</item>
        <item>1h 57m</item>
        <item>2h 19m</item>
    </string-array>
</resources>