<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.detail.DetailCinemaActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.MovieApp.Detail.Collapsed">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/image_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <View
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="top"
                android:background="@drawable/scrim_topdown"
                android:fitsSystemWindows="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="bottom"
                android:background="@drawable/scrim" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/anim_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:id="@+id/text_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_500"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/genre" />

            <TextView
                android:id="@+id/text_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_genre"
                tools:text="@string/title" />

            <RatingBar
                android:id="@+id/rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:theme="@style/RatingBar"
                android:rating="5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_rating"
                app:layout_constraintBottom_toBottomOf="@id/text_rating"
                style="?android:attr/ratingBarStyleSmall"/>

            <TextView
                android:id="@+id/text_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@android:color/holo_orange_light"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/rating"
                app:layout_constraintTop_toBottomOf="@id/text_title"
                tools:text="@string/rating" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:text="@string/_10"
                app:layout_constraintStart_toEndOf="@id/text_rating"
                app:layout_constraintTop_toBottomOf="@id/text_title" />

            <TextView
                android:id="@+id/text_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_500"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_title"
                tools:text="@string/duration" />

            <TextView
                android:id="@+id/text_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rating"
                tools:text="@string/date" />

            <TextView
                android:id="@+id/text_overview_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/text_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/overview" />

            <TextView
                android:id="@+id/text_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:justificationMode="inter_word"
                android:breakStrategy="high_quality"
                app:layout_constraintTop_toBottomOf="@id/text_overview_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@string/overview_text" />

            <TextView
                android:id="@+id/text_cast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/text_overview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/cast" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:scrollbars="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_cast"
                tools:listitem="@layout/items_cast_list" />

            <Button
                android:id="@+id/btn_watch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/watch"
                android:textColor="@color/white"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/rv_cast"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:src="@drawable/ic_share"
        app:tint="@color/white"
        app:backgroundTint="@color/blue_500"
        app:fabSize="normal"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"
        android:focusable="true"
        android:contentDescription="@string/share" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>